kubernetes/deployments/application/ords/base/ingress--ords.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ords-ingress
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: $host
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ords-svc
                port:
                  name: ords-svc-port
